--- a/Day6/Card Generator/style.css
+++ b/Day6/Card Generator/style.css
@@ -49,7 +49,7 @@ label {
   height: 150px;
   box-shadow: 10px 10px 5px 4px rgba(173, 216, 230, 0.365);
 }
-#buttonContainer {
+.buttonContainer {
   text-align: center;
   margin-top: 10px;
 }
@@ -63,4 +63,18 @@ label {
   font-weight: bold;
   font-family: "Brush Script MT";
   font-size: 30px;
+}
+
+#close-window{
+    width: 200px;
+    height: 50px;
+    border-radius: 5px;
+    border-color: blanchedalmond;
+    color: blanchedalmond;
+    background-color: rgb(3, 87, 51);
+    font-weight: bold;
+    font-family:'Courier New', Courier, monospace;
+    font-size: 20px;
+    text-align: center;
+
 }
